# warthog_offline_tools

./: .gitignore  .gitignoregit  requirements.txt
extrinsic/: README  extrinsic_check.py  extrinsic_trans_alignment.py  icp_store.py
extrinsic/cpp/: CMakeLists.txt  binary_load.cpp  extract_normals.cpp  get_nearest_neighbors.cpp  nanoflann.hpp  nanoflann_utils.hpp  normal.hpp  voxel_downsample.hpp
post_processing/: README  extract.sh  multiple_extract.sh  todo
post_processing/calib/: T_aeva_robot
post_processing/extract_pointclouds/: extract.py
